fix: Prevent docs & specs layout from clipping
on semi-narrow screens (#32)

--- a/_sass/open-project-mixins.scss
+++ b/_sass/open-project-mixins.scss
@@ -16,7 +16,6 @@
   flex-flow: column nowrap;
 
   > .nav-sidebar {
-    flex-shrink: 0;
     padding-top: 50px;
 
     > .sidebar-header {
@@ -56,12 +55,28 @@
           margin-bottom: 10px;
           margin-right: $side-margin;
 
-          a {
+          > a {
             background-color: #F7F7F7;
             display: block;
             font-weight: bold;
             padding: 4px 0 4px $side-margin;
             border-radius: 10px;
+
+            display: flex;
+            flex-flow: row nowrap;
+
+            .lbl {
+              flex: 1;
+              white-space: nowrap;
+              text-overflow: ellipsis;
+              overflow: hidden;
+            }
+            .ico {
+              flex-shrink: 0;
+              text-align: right;
+              width: 32px;
+              padding-right: 10px;
+            }
           }
         }
       }
@@ -156,10 +171,25 @@
     flex-flow: row nowrap;
 
     > .nav-sidebar {
-      width: 320px;
+      flex: 0.4;
+      min-width: 120px;
       border-right: #F7F7F7 2px solid;
-      margin-right: 60px;
       padding-top: 70px;
+    }
+    > article {
+      > header,
+      > .body {
+        margin-left: 60px;
+      }
+      .body {
+        overflow-x: scroll;
+        pre {
+          line-height: 1;
+          > code {
+            font-size: 80%;
+          }
+        }
+      }
     }
   }
 }
